--- a/freeCodeCamp/back-end-development-and-apis/package.json
+++ b/freeCodeCamp/back-end-development-and-apis/package.json
@@ -1,5 +1,6 @@
 {
 	"author": "Antonio Cirillo",
+	"description": "Back end development and apis",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
