--- a/freeCodeCamp/back-end-development-and-apis/package.json
+++ b/freeCodeCamp/back-end-development-and-apis/package.json
@@ -1,6 +1,7 @@
 {
 	"author": "Antonio Cirillo",
 	"description": "Back end development and apis",
+	"keywords": ["freecodecamp", "back-end", "apis"],
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
