--- a/freeCodeCamp/back-end-development-and-apis/package.json
+++ b/freeCodeCamp/back-end-development-and-apis/package.json
@@ -2,6 +2,7 @@
 	"author": "Antonio Cirillo",
 	"description": "Back end development and apis",
 	"keywords": ["freecodecamp", "back-end", "apis"],
+	"license": "MIT",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
