--- a/freeCodeCamp/back-end-development-and-apis/package.json
+++ b/freeCodeCamp/back-end-development-and-apis/package.json
@@ -1,11 +1,17 @@
 {
 	"author": "Antonio Cirillo",
 	"description": "Back end development and apis",
-	"keywords": ["freecodecamp", "back-end", "apis"],
+	"keywords": [
+		"freecodecamp",
+		"back-end",
+		"apis"
+	],
 	"license": "MIT",
+	"version": "1.0.0",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"moment": "2.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
