--- a/DevOps with Node.js/Dockerfile
+++ b/DevOps with Node.js/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:15
-WORKDIR ./app
+WORKDIR /app
 COPY package.json .
 RUN npm install
 COPY . ./
 ENV PORT 3000
 EXPOSE $PORT
-CMD ["npm", "run", "dev"]
+CMD ["node", "index.js"]
